<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailBuku"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_buku"
        android:textSize="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/buku"
        android:layout_marginTop="10dp">

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_buku_tutorial_android_api"
        android:layout_marginTop="20dp">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/penulis_manin">

    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/harga_buku_rp_35_000">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masulan_jumlah_yang_dibeli"
        android:layout_marginTop="20dp"
        android:id="@+id/id_edit_text_jmlah_buku">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/beli"
        android:layout_marginTop="30sp"
        android:layout_gravity="center"
        android:id="@+id/id_button_beli_buku">

    </androidx.appcompat.widget.AppCompatButton>

</androidx.appcompat.widget.LinearLayoutCompat>