<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_account_circle">

    </androidx.appcompat.widget.AppCompatImageView>


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_ed_username"
        android:layout_marginTop="30sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/username">

    </androidx.appcompat.widget.AppCompatEditText>


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_ed_password"
        android:layout_marginTop="30sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/password"
        android:inputType="textPassword">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_btn_login"
        android:text="@string/masuk"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

    </androidx.appcompat.widget.AppCompatButton>

</LinearLayout>